kubernetes/main/apps/homebridge/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebridge
  labels:
    alerts.nidr0x.win/enabled: "true"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: homebridge
  template:
    metadata:
      labels:
        app: homebridge
        alerts.nidr0x.win/enabled: "true"
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "2"
      securityContext:
        fsGroup: 988
        fsGroupChangePolicy: "OnRootMismatch"
      hostNetwork: true
      containers:
        - name: homebridge
          # renovate: datasource=docker depName=homebridge/homebridge
          image: homebridge/homebridge:2026-09-25
          imagePullPolicy: Always
          securityContext:
            readOnlyRootFilesystem: false
            runAsNonRoot: false
            allowPrivilegeEscalation: true
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
            limits:
              memory: 450Mi
          ports:
            - name: http
              protocol: TCP
              containerPort: 8090
          volumeMounts:
            - name: homebridge-config
              mountPath: /homebridge
          startupProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 0
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 0
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
      volumes:
        - name: homebridge-config
          persistentVolumeClaim:
            claimName: homebridge-config-pvc
