kubernetes/main/apps/homebridge/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: homebridge
  name: homebridge
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8591
      targetPort: http
  selector:
    app: homebridge
